# Proposal_Writing_New

./: .gitignore  DB_ACCESS_PATTERNS_SINGLE_TABLE.md  Dockerfile  FULLSTACK_AI_CONTRACT.md  README.md  main.py  pyproject.toml  requirements.txt  serverless.yml  test_payloads.json  testing.ipynb  testing.md
app/: add_document.py  bid_examples.py  config.py  document_processing.py  graph.py  llm.py  logging_utils.py  main.py  portfolio_clean.md  repositories.py  schemas.py  seed_data.py  services.py  vector_store.py
logs/: app.log.1
test_payloads/: bid_example_unrelated_request.json  bids_sync.json  generate_bid_example.json  generate_proposal.json  generate_proposal_job_description_alias.json  optimize_proposal_direct_answer.json  optimize_proposal_revise.json  portfolio_pdf_parse_form.json  portfolio_structured_sync.json  portfolio_sync.json  signup_custom_template.json  signup_selected_template.json  single_table_items.json  task_status_completed_result.json  task_status_example.json  update_bid_example.json
tests/: conftest.py  test_api.py  test_bid_example_and_portfolio_import.py  test_graph.py  test_llm.py  test_repositories.py
